2008-08-04  Paolo Borelli  <pborelli@katamail.com>

	Patch contributed by Eduardo Lima <elima@igalia.com>, bug #541407

	* src/baobab-chart.c:
	* src/baobab.c:
	* src/baobab-ringschart.c:
	* src/baobab-chart.h:
	* src/baobab.h:
	* src/baobab-rngschart.h:
	* src/callbacks.c:
	* src/callbacks.h:

	Reimplemeny the ringschart as a subclass of BaobabChart.

2008-07-25  Paolo Borelli  <pborelli@katamail.com>

	* src/baobab-scan.c: do not leak file info when stopping scan.

2008-07-25  Paolo Borelli  <pborelli@katamail.com>

	* src/baobab-treemap.c: include headers to fix compiler warnings.

2008-07-25  Fabio Marzocca  <thesaltydog@gmail.com>

	Patch contributed by Matthias Clasen <mclasen@redhat.com>, bug #544637
	USe standard icon names
	
	* src/gedit-spinner.c:

2008-07-13  Fabio Marzocca  <thesaltydog@gmail.com>

	* data/baobab.1: fixed a typo on email address.

2008-06-30  Alejandro G. Castro <acastro@igalia.com>

	* src/baobab-treemap.h: Fixed a typo applying the last patch.

2008-06-28  Alejandro G. Castro <acastro@igalia.com>

	Patch contributed by Eduardo Lima <elima@igalia.com>, bug #530512

	Implemented a new treemap object and moved into the main window,
	now we can select with a combobox in the main window which graph
	we want: ringschart or treemap. We have used the ringschart code
	in order to create a new abstract class and the new treemap just
	inherits from it and changes the rendering, in the near future we
	will change the ringschart in order to use this new abstract
	class.

	* data/baobab.glade:
	* src/Makefile.am:
	* src/baobab-graphwin.c:
	* src/baobab-graphwin.h:
	* src/baobab-tree-map.c:
	* src/baobab-tree-map.h:
	* src/baobab-treeview.c
	(on_tv_cur_changed),
	(on_tv_button_press):
	* src/baobab-utils.c
	(popupmenu_list):
	* src/callbacks.h:
	* src/callbacks.c
	(on_tv_selection_changed),
	(on_move_upwards_cb),
	(on_zoom_in_cb),
	(on_zoom_out_cb),
	(on_chart_type_change):
	Removed files, code and options in the menu that were used to show